--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/styles/template.css">
+    <link rel="<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">">
 </head>
 <body>
-    <h1>My Portfolio</h1>
+    <h1 class="bi bi-person">My Portfolio</h1>
     <img src="public/images/achal.jpg" height="200px" width="200px">
     <h3>About Me</h3>
     <p>I am ____________ an aspiring REACT and UI Learning fresher who is trying to seek a
